# is2fp

./: .gitignore  .gitmodules  Cargo.toml  README.md  router.ping
.github/workflows/: release.yml  rust.yml
scripts/: release.sh
src/: db.rs  error.rs  i2p.rs  lib.rs  main.rs  utils.rs
