[package]
name = "is2fp"
version = "0.1.0"
edition = "2021"
authors = ["n12n"]

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.0"
futures = "0.3.30"
j4-i2p-rs = { path = "./j4-i2p-rs", version = "0.3.0-alpha" }
kn0sys-lmdb-rs = "0.1.4"
lazy_static = "1.4.0"
libp2p = "0.55"
libp2p_dandelion = "0.1.1"
log = "0.4"
rand = "0.9"
rand_core = "0.6.4"
reqwest = { version = "0.11.12", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33.1"
thiserror  = "1.0.63"
tokio = "1.25.0"
